--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -19,7 +19,7 @@ body {
   width: 100%;
   padding-top: 1rem;
   padding-bottom: 80px;
-    background-color: #ffad01;
+    background-color: #2f39d1;
 }
 
 body.fixed-nav #content-wrapper {
