--- a/views/shared/_sidebar.html
+++ b/views/shared/_sidebar.html
@@ -38,4 +38,10 @@
                 <i class="fas fa-fw fa-table"></i>
                 <span>My appointments</span></a>
         </li>
+
+        <li class="nav-item active">
+            <a class="nav-link" href="add-new-appointment.php">
+                <i class="fas fa-fw fa-table"></i>
+                <span>Add new appointment</span></a>
+        </li>
     </ul>
